# jira-skype-app

./: README  keypair.py  skype-app.py
skypekit_4.3.0/: CMakeLists.txt  CMake_README.txt  README  build_versions.txt  license_label_D.txt
skypekit_4.3.0/buildfiles/: makefile.header.mk  options.cmake
skypekit_4.3.0/buildfiles/arch/: _common-linux-arm.mk  _common-linux-mips.mk  _common.mk  android-armv7le-eabi.mk  linux-mips32be.mk  linux-mips32le.mk
skypekit_4.3.0/buildfiles/gnu/: README  options-default.cmake
skypekit_4.3.0/buildfiles/msvc/: README  options-default.cmake
skypekit_4.3.0/cmake_modules/: FindCppUnit.cmake
skypekit_4.3.0/examples/: license_label_A.txt
skypekit_4.3.0/examples/cpp/qt_videocalls/: QSKClasses.cpp  QSKClasses.h  app_token.h  main.cpp  mainwindow.cpp  mainwindow.h  qt_videocalls.pro  videowidget.cpp
skypekit_4.3.0/examples/cpp/tutorial/: README  functions.lua
skypekit_4.3.0/examples/cpp/tutorial/keypair/: keypair.h
skypekit_4.3.0/examples/cpp/tutorial/step1/: readme.txt
skypekit_4.3.0/examples/cpp/tutorial/step10/: readme.txt
skypekit_4.3.0/examples/cpp/tutorial/step11/: readme.txt
skypekit_4.3.0/examples/cpp/tutorial/step12/: readme.txt
skypekit_4.3.0/examples/cpp/tutorial/step13/: readme.txt
skypekit_4.3.0/examples/cpp/tutorial/step14/: readme.txt
skypekit_4.3.0/examples/cpp/tutorial/step15/: readme.txt
skypekit_4.3.0/examples/cpp/tutorial/step16/: readme.txt
skypekit_4.3.0/examples/cpp/tutorial/step2/: readme.txt  tutorial_2.cpp
skypekit_4.3.0/examples/cpp/tutorial/step3/: readme.txt
skypekit_4.3.0/examples/cpp/tutorial/step4/: readme.txt
skypekit_4.3.0/examples/cpp/tutorial/step5/: readme.txt
skypekit_4.3.0/examples/cpp/tutorial/step6/: readme.txt
skypekit_4.3.0/examples/cpp/tutorial/step7/: readme.txt
skypekit_4.3.0/examples/cpp/tutorial/step8/: readme.txt
skypekit_4.3.0/examples/cpp/tutorial/step9/: readme.txt
skypekit_4.3.0/examples/cpp/uikit/: CMakeLists.txt
skypekit_4.3.0/examples/cpp/uikit/qtsimpleclient/: CMakeLists.txt  qtsimpleclientapp.cpp
skypekit_4.3.0/examples/dotnet/tutorials/: README.txt
skypekit_4.3.0/examples/dotnet/tutorials/common/: tutorials_common.cs
skypekit_4.3.0/examples/dotnet/tutorials/step01_login/: Login.Designer.cs  Login.cs  (+1 more)
skypekit_4.3.0/examples/java/: build.xml
skypekit_4.3.0/examples/python/tutorial/: TEST.pem  autoanswer.py  call.py  chat.py  contacts.py  contactsearch.py  conversations.py  keypair.py  login.py  test.py
skypekit_4.3.0/interfaces/skype/cpp_embedded/: BuildWithCmake.bat  BuildWithCmake.sh  CMakeLists.txt
skypekit_4.3.0/interfaces/skype/dotnet/: README.txt  dotnet_todo.txt  reference_manual.html
skypekit_4.3.0/interfaces/skype/java2/: build.xml  migrate2java2.wlua  readme.txt
skypekit_4.3.0/interfaces/skype/python/: Skype.py
skypekit_4.3.0/interfaces/videortp/: SidVideoRTPInterface.hpp
skypekit_4.3.0/interfaces/videortp/skypekit_ipc/: SidVideoRTPIfConnection.cpp  SidVideoRtpIfConnection.hpp  sidg_msg_videortpif.cpp  sidg_msg_videortpif.hpp  sidg_msg_videortpif_cb.cpp
skypekit_4.3.0/interfaces/videortp/videohost_ipc/: CMakeLists.txt  SidVideoHostConnection.cpp  SidVideoHostConnection.hpp  SidVideoRTPHostMain.cpp
skypekit_4.3.0/interfaces/voicepcm/: CMakeLists.txt  SidPCMInterface.hpp
skypekit_4.3.0/ipc/cpp/: CMakeLists.txt  SidAVClient.hpp  SidAVDummyHelpers.cpp  SidAVServer.hpp  SidAVTransportWrapper.cpp  SidApi.cpp  SidApi.hpp  SidClientConnectionUnx.cpp  SidClientSession.cpp  SidClientSession.hpp  SidCommonConfig.hpp  SidConnection.cpp  SidConnection.hpp  SidListener.cpp  SidListener.hpp  SidProtocolBinClient.cpp  SidProtocolBinClient.hpp  SidProtocolBinCommon.cpp  SidProtocolBinCommon.hpp  SidProtocolBinServer.cpp  SidProtocolBinServer.hpp  SidProtocolClientInterface.hpp  SidProtocolFactory.cpp  SidProtocolFactory.hpp  SidProtocolServerInterface.hpp  SidServerConnectionUnx.cpp  SidServerSession.cpp  SidServerSession.hpp  SidTLSEncryption.cpp  SidTLSEncryption.hpp  VideoTransportClient.hpp
skypekit_4.3.0/ipc/cpp/AVTransport/: CMakeLists.txt  NamedPipes.cpp
skypekit_4.3.0/ipc/cpp/VideoBuffers/: PosixShm.cpp  SysVShm.hpp  WinShm.cpp
skypekit_4.3.0/ipc/python/: skypekit.py
skypekit_4.3.0/reference/: Makefile
skypekit_4.3.0/reference/common/video/: BitrateStat.hpp  H264AnxbToRtp.cpp
skypekit_4.3.0/reference/gstreamer-media-engine/: Makefile  skype-audio-manager.cpp  skype-audio-manager.hpp  skype-base-stream.c  skype-media-engine.cpp
skypekit_4.3.0/reference/openglvideorenderer/: glwindow.cpp  glwindow.h  winglwindow.cpp
skypekit_4.3.0/reference/videortphost-imx27/: Makefile  premake4.lua
skypekit_4.3.0/reference/videortphost-imx27/src/: Renderer.cpp  SendVideoWrapper.cpp
skypekit_4.3.0/reference/videortphost-test/src/: H264Decoder.cpp
skypekit_4.3.0/reference/voicepcmhost-alsa/: CMakeLists.txt  Makefile  PCMHostAlsa.cpp  PCMHostAlsa.hpp  README  README_Cmake  premake4.lua
skypekit_4.3.0/reference/voicepcmhost-alsa/SkypeAlsaWrapper/: AlsaBackend.cpp  AlsaBackend.h  AlsaDeviceDetection.cpp  AlsaDeviceDetection.h  AlsaFormat.cpp  AlsaFormat.h  AlsaHardwareParams.cpp  AlsaParams.h  AlsaSoftwareParams.cpp  AlsaVolumeControl.cpp  AlsaVolumeControl.h  AlsaWrappers.h  AudioStream.cpp  AudioStream.h  CompilerBarrier.h  DeviceInfo.cpp  DeviceInfo.h  Doxyfile  Log.h  Makefile  MutexLock.h  PhantomRingbuffer.h  StreamSpec.cpp  StreamSpec.h  VolumeControl.h
skypekit_4.3.0/reference/voicepcmhost-file/: README
skypekit_4.3.0/reference/voicepcmhost-loopback/: CMakeLists.txt  PCMLoopback.cpp  PCMLoopbackOptionsParser.hpp  README  SidPCMHostMainLoopback.cpp  license_label_C.txt  premake4.lua
skypekit_4.3.0/reference/voicepcmhost-rtaudio/: README  RtAudioPCMInterface.cpp
skypekit_4.3.0/reference/voicepcmhost-rtaudio/patch/: license_label_B.txt
skypekit_4.3.0/tools/rtptool/src/: AudioRtpAnalyzer.cpp  AudioRtpAnalyzer.hpp  Common.hpp  FileReader.cpp  FileReader.hpp  FileWriter.cpp  FileWriter.hpp  H264RtpAnalyzer.cpp  H264RtpAnalyzer.hpp  Logging.cpp  Logging.hpp  RTPTool.cpp  RTPTool.hpp  main.cpp  rfc3551.hpp
(+1051 files in other folders)
